Corrected spacing for list items. Adjusted font sizes. Changed list wrapper to a div.

--- a/styles/todo-list.css
+++ b/styles/todo-list.css
@@ -12,11 +12,12 @@ main {
 	flex-direction: column;
 	align-items: center;
 	margin-top: 5rem;
+	font-size: 2rem;
 }
 
 .todo-title-wrapper h1 {
 	font-family: 'Special Elite', cursive;
-	font-size: 5rem;
+	font-size: 4em;
 	color: #1d1d1d;
 }
 
@@ -24,24 +25,18 @@ main {
 	width: 27vw;
 }
 
-.todo-list {
-  list-style: none;
-  margin-bottom: 2rem;
-}
-
 .todo-item {
   margin-bottom: 1rem;
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-between;
 }
 
 .todo-item span {
   flex-grow: 1;
   margin-left: 1rem;
-  margin-right: 1rem;
-  font-size: 1.5rem;
+  margin-right: 5rem;
+  
 }
 
 .done span {
@@ -65,8 +60,7 @@ input[type="checkbox"] {
 
 .tick::before {
   content: '✓';
-  font-size: 2rem;
-  display: none;
+	display: none;
 }
 
 .done .tick::before {
@@ -74,7 +68,7 @@ input[type="checkbox"] {
 }
 
 .delete-todo {
-	font-size: 1.5rem;
+	font-size: 0.9em;
 	color: red;
 }
 
@@ -100,7 +94,7 @@ input[type="checkbox"] {
 	width: 25vw;
 	height: 2rem;
 	font-family: 'Roboto', sans-serif;
-	font-size: 1rem;
+	font-size: 0.75em;
 	border: none;
 	background-color: #f5f5f5;
 }
